# capitoltrades-api-unofficial

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: release.yml  sqlite-sync.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/01-schema-migration-data-model/: 01-01-PLAN.md  01-01-SUMMARY.md  01-01-VERIFICATION.md  01-RESEARCH.md
.planning/phases/02-trade-extraction/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/02-yahoo-finance-client-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-ticker-validation-trade-value-estimation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-01-VERIFICATION.md  03-RESEARCH.md
.planning/phases/03-trade-sync-and-output/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-politician-enrichment/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/04-price-enrichment-pipeline/: 04-01-PLAN.md  04-01-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md  04-price-enrichment-pipeline-UAT.md
.planning/phases/05-issuer-enrichment/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
capitoltraders_cli/: Cargo.toml
capitoltraders_cli/src/: main.rs  output.rs  output_tests.rs  xml_output.rs  xml_output_tests.rs
capitoltraders_cli/src/commands/: analytics.rs  anomalies.rs  conflicts.rs  donations.rs  enrich_prices.rs  issuers.rs  map_employers.rs  mod.rs  politicians.rs  portfolio.rs  sync.rs  sync_donations.rs  sync_fec.rs  trades.rs
capitoltraders_cli/tests/: schema_validation.rs
capitoltraders_lib/: Cargo.toml
capitoltraders_lib/src/: analysis.rs  analytics.rs  anomaly.rs  cache.rs  client.rs  committee.rs  committee_jurisdiction.rs  conflict.rs  db.rs  employer_mapping.rs  error.rs  fec_mapping.rs  lib.rs  portfolio.rs  pricing.rs  scrape.rs  sector_mapping.rs  ticker_alias.rs  validation.rs  validation_tests.rs  yahoo.rs
capitoltraders_lib/src/openfec/: client.rs  error.rs  mod.rs  rate_limiter.rs  types.rs
capitoltraders_lib/src/tiingo/: client.rs  error.rs  mod.rs  types.rs
capitoltraders_lib/tests/: committee_resolver_integration.rs  openfec_integration.rs
capitoltraders_lib/tests/fixtures/: issuer_detail_no_performance.html  issuer_detail_not_found.html  issuer_detail_with_performance.html  openfec_candidates.json  openfec_committees.json  openfec_schedule_a.json  openfec_schedule_a_page2.json  politicians_committee_filtered.html  trade_detail_minimal.html  trade_detail_option.html  trade_detail_stock.html
capitoltrades_api/: Cargo.toml  Makefile
capitoltrades_api/src/: client.rs  errors.rs  lib.rs  user_agent.rs
capitoltrades_api/src/query/: common.rs  issuer.rs  mod.rs  politician.rs  trade.rs
capitoltrades_api/src/query/snapshots/: capitoltrades_api__query__issuer__tests__issuer_query-2.snap  capitoltrades_api__query__issuer__tests__issuer_query.snap  capitoltrades_api__query__politician__tests__politician_query-2.snap  capitoltrades_api__query__politician__tests__politician_query-3.snap  capitoltrades_api__query__politician__tests__politician_query-4.snap  capitoltrades_api__query__politician__tests__politician_query-5.snap  capitoltrades_api__query__politician__tests__politician_query-6.snap  capitoltrades_api__query__politician__tests__politician_query-7.snap  capitoltrades_api__query__politician__tests__politician_query-8.snap  capitoltrades_api__query__politician__tests__politician_query.snap  capitoltrades_api__query__trade__tests__trade_query-2.snap  capitoltrades_api__query__trade__tests__trade_query-3.snap  capitoltrades_api__query__trade__tests__trade_query-4.snap  capitoltrades_api__query__trade__tests__trade_query-5.snap  capitoltrades_api__query__trade__tests__trade_query-6.snap  capitoltrades_api__query__trade__tests__trade_query.snap
capitoltrades_api/src/types/: issuer.rs  meta.rs  mod.rs  politician.rs  trade.rs
capitoltrades_api/tests/: client_integration.rs  deserialization.rs  query_builders.rs
capitoltrades_api/tests/fixtures/: issuers.json  politicians.json  trades.json  trades_minimal.json
schema/: issuer.schema.json  issuers.xsd  politician.schema.json  politicians.xsd  sqlite.sql  trade.schema.json  trades.xsd
seed_data/: committee_sectors.yml  employer_issuers.toml  gics_sector_mapping.yml  ticker_aliases.yml
(+97 files in other folders)
