[workspace]
resolver = "2"
members = [
    "capitoltrades_api",
    "capitoltraders_lib",
    "capitoltraders_cli",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
