[package]
name = "capitoltraders_cli"
version = "1.4.1"
edition = "2021"

[[bin]]
name = "capitoltraders"
path = "src/main.rs"

[dependencies]
capitoltraders_lib = { path = "../capitoltraders_lib" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
tabled = "0.17"
quick-xml = "0.37"
csv = "1.3"
chrono = { workspace = true }
indicatif = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.5"
dotenvy = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
jsonschema = "0.29"
