[package]
name = "capitoltraders_lib"
version = "1.4.1"
edition = "2021"

[dependencies]
capitoltrades_api = { path = "../capitoltrades_api" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = "6"
rand = "0.8.5"
rusqlite = { workspace = true }
reqwest = { workspace = true }
regex = "1"
yahoo_finance_api = "4.1.0"
time = { version = "0.3", features = ["macros"] }
serde_yml = { workspace = true }
strsim = "0.11"
toml = "0.8"

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
serde_json = { workspace = true }
